feat: pn cred flow

--- a/src/comm/.readme.md
+++ b/src/comm/.readme.md
@@ -4,4 +4,5 @@
   - provide functions to enable data fetching across networks,
   - provide functions to map or "normalize" data from external resources into an idiomatic format,
   - contain definitions for internet computer canister actors,
-  - provide integration testing for our external communication layer.
+  - provide integration testing for our external communication layer,
+  - provides factory functions to generate communication layer stubs.
